--- a/Lun5/the_gossip_project/app/views/layouts/application.html.erb
+++ b/Lun5/the_gossip_project/app/views/layouts/application.html.erb
@@ -24,13 +24,13 @@
     <div class="collapse navbar-collapse" id="navbarColor02">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="/acceuil/page_d_acceuil">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="/welcome/home">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/presentation_et_contact/team">Team</a>
+          <a class="nav-link" href="/presentation/team">Team</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/presentation_et_contact/contact">Contact</a>
+          <a class="nav-link" href="/presentation/contact">Contact</a>
         </li>
       </ul>
       <form class="form-inline my-2 my-lg-0">
@@ -40,8 +40,11 @@
     </div>
   </nav>
 
-  
+  <div class="container">
+
     <%= yield %>
+    
+  </div>
   
   
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
