--- a/Lun5/the_gossip_project/app/assets/stylesheets/presentation.scss
+++ b/Lun5/the_gossip_project/app/assets/stylesheets/presentation.scss
@@ -1,3 +1,3 @@
-// Place all the styles related to the presentation_et_contact controller here.
+// Place all the styles related to the presentation controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
